Use LZW compression on 1- and 8-bit formats

The documentation says we use LZW, and LZW both works and produces
smaller results, so it would make sense to follow our documentation.

This also fixes a problem with some readers having trouble with the
CCITTRLE compressions.

Task-number: QTBUG-53774
Change-Id: Ie2d179279a4ce65d8578c037ad59cc37ca854825
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>